--- a/src/styl/index.styl
+++ b/src/styl/index.styl
@@ -6,6 +6,7 @@
 @require 'lichess-font'
 @require 'typo'
 @require 'colors'
+@require 'variables'
 @require 'common'
 @require 'form'
 @require 'modal'
