--- a/src/styl/game.styl
+++ b/src/styl/game.styl
@@ -58,7 +58,6 @@
   min-height 0 // fix chrome 73 regression
   flex 1 1 auto
   overflow hidden
-  background lighten(bgdark, 6%)
   overflow-y auto
   padding 0.2em
   @media only screen and (orientation: portrait)
@@ -123,7 +122,7 @@
         order 1
         padding-top 0
     &.crazy
-      flex 0 0 'calc(((100vw - (100vh - %s - 6vh) - 9vh) / 5) + 30px + 2vmax + 3em)' % headerHeight
+      flex 0 0 calc(((100vw - var(--board-side-land-tablet) - 9vh) / 5) + 30px + 2vmax + 3em)
       flex-flow row wrap
 
 .antagonistInfos
@@ -478,13 +477,13 @@
       right 3px
       bottom 3px
   @media only screen and (orientation: landscape)
-    width 'calc((100vh - %s) / 8)' % headerHeight
-    height 'calc((100vh - %s) / 8)' % headerHeight
+    width calc(var(--board-side-land) / 8)
+    height calc(var(--board-side-land) / 8)
     max-width 60px
     max-height 60px
   @media only screen and (orientation: landscape) and (min-width 768px) and (min-height 768px)
-    width 'calc((100vw - (100vh - %s - 6vh - env(safe-area-inset-top)) - 9vh) / 5)' % headerHeight
-    height 'calc((100vw - (100vh - %s - 6vh - env(safe-area-inset-top)) - 9vh) / 5)' % headerHeight
+    width calc((100vw - var(--board-side-land-tablet) - 9vh) / 5)
+    height calc((100vw - var(--board-side-land-tablet) - 9vh) / 5)
     max-width 120px
     max-height 120px
   @media only screen and (orientation: portrait) and (min-width 768px) and (min-height 768px)
