--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -1,9 +1,3 @@
-:root
-  --sat env(safe-area-inset-top)
-  --sar env(safe-area-inset-right)
-  --sab env(safe-area-inset-bottom)
-  --sal env(safe-area-inset-left)
-
 html
   font-family 'Noto Sans', sans-serif
 
@@ -245,11 +239,16 @@ main
 
 .content
   width 100%
-  height 'calc(100% - %s - env(safe-area-inset-top))' % headerHeight
+  height var(--content-height)
   display flex
   flex-flow column nowrap
+  &.withFooter
+    height 'calc(var(--content-height) - %s)' % footerHeight
   &.fullScreen
     height 100%
+  @media only screen and (orientation portrait) and (min-width 768px) and (min-height 768px)
+    &.withFooter
+      height 'calc(var(--content-height) - %s)' % footerHeightBigScreens
 
 .main_footer
   flex 0 0 footerHeight
