--- a/src/styl/training.styl
+++ b/src/styl/training.styl
@@ -135,7 +135,7 @@
     margin-top 0
 
 
-#training-graph
+.training-graph
   width 100%
   height 250px
   padding 1em
@@ -144,8 +144,10 @@
     fill rgba(blue, 0.5)
   .line
     stroke blue
-  .legend
-    fill blue
+  .ticks, .domain
+    stroke darken(modalDarkColor, 10%)
+    line
+      stroke darken(modalDarkColor, 10%)
 
 .puzzle-recents
   display flex
@@ -204,6 +206,12 @@
     > .buttons
       > span
         color inherit
+  .training-graph
+    .ticks, .domain
+      stroke lighten(modalLightColor, 30%)
+      line
+        stroke lighten(modalLightColor, 30%)
+
 
 
 .view-container.transp
