Tweak user games for tablet

--- a/src/styl/user.styl
+++ b/src/styl/user.styl
@@ -162,13 +162,10 @@ h3.fullname
     > .display_board
       flex 0 0 150px
       height 150px
-  @media only screen and (orientation landscape) and (min-height 700px), only screen and (orientation portrait) and (min-width 600px)
+  @media only screen and (min-width 768px) and (min-height 768px)
     > .display_board
       flex 0 0 210px
       height 210px
-    .userGame-infos
-      font-size 1.1em
-      line-height 2em
     .userGame-meta
       font-size 1em
     .userGame-versus
