Allow joining and withdrawing from team tournaments

--- a/src/styl/tournament.styl
+++ b/src/styl/tournament.styl
@@ -401,14 +401,16 @@
         padding-left 100px
       &.no-margin
         margin-right 0px
-      &.notVisible
-        visibility hidden
-        position absolute
       .textField
         width 60%
     >.tournament_name_warning
       font-size .75em
       margin-top 5px
+
+.tournamentForm
+  .notVisible
+    visibility hidden
+    position absolute
 
 .tournament_form_popup
   background bglight
