--- a/src/styl/tournament.styl
+++ b/src/styl/tournament.styl
@@ -4,6 +4,7 @@
 
   grid-template-areas:
     'infos'\
+    'podium'\
     'teamLeaderboard'\
     'leaderboard'\
     'games'\
@@ -11,26 +12,20 @@
 
   @media only screen and (min-width 800px)
     grid-template-columns: repeat(2, 1fr)
-    grid-template-rows: auto repeat(3, fit-content(0))
+    grid-template-rows: auto repeat(4, fit-content(0))
     grid-template-areas:
       'infos infos'\
-      'teamLeaderboard leaderboard'\
-      'games games';
+      'podium podium'\
+      'leaderboard games'\
+      'leaderboard .';
 
-  &.finished
-    grid-template-areas:
-      'infos'\
-      'podium'\
-      'teamLeaderboard'\
-      'leaderboard'\
-      'games'\
-      '.'
+  &.teamBattle
     @media only screen and (min-width 800px)
       grid-template-areas:
         'infos infos'\
         'podium podium'\
         'teamLeaderboard leaderboard'\
-        'games games';
+        'games .';
 
 .header-subTitle.tournament-subtTitle
   font-size 1em
@@ -95,7 +90,7 @@
   &:before
     content: ''
 
-.tournament-list-player
+.tournament-list-item
   position initial
   display flex
   flex-flow row nowrap
@@ -103,7 +98,7 @@
   > .tournamentPoints
     flex 0 0 20%
     text-align right
-  > .tournamentPlayer
+  > .tournamentIdentity
     flex-grow 1
     text-overflow: ellipsis
     white-space: nowrap
@@ -125,21 +120,6 @@
     color green
   &.negative
     color red
-
-.tournament-list-team
-  position initial
-  display flex
-  flex-flow row nowrap
-  justify-content space-between
-  > .tournamentTeamPoints
-    flex 0 0 20%
-    text-align right
-  > .tournamentTeam
-    flex-grow 1
-    text-overflow: ellipsis
-    white-space: nowrap
-    overflow hidden
-    display inherit
 
 .timeArrow
   font-weight: bold
