--- a/src/styl/tournament.styl
+++ b/src/styl/tournament.styl
@@ -96,8 +96,9 @@
   flex-flow row nowrap
   justify-content space-between
   > .tournamentPoints
-    flex 0 0 20%
+    flex 0 0 0
     text-align right
+    padding-left 5px
   > .tournamentIdentity
     flex-grow 1
     text-overflow: ellipsis
