added support for pixel pieces

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -530,3 +530,36 @@
       background-image url('../../images/pieces/symmetric/wK.svg')
     &.black
       background-image url('../../images/pieces/symmetric/bK.svg')
+
+/* Pixel */
+.pixel piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/pixel/wP.svg')
+    &.black
+      background-image url('../../images/pieces/pixel/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/pixel/wB.svg')
+    &.black
+      background-image url('../../images/pieces/pixel/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/pixel/wN.svg')
+    &.black
+      background-image url('../../images/pieces/pixel/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/pixel/wR.svg')
+    &.black
+      background-image url('../../images/pieces/pixel/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/pixel/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/pixel/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/pixel/wK.svg')
+    &.black
+      background-image url('../../images/pieces/pixel/bK.svg')
