--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -199,3 +199,8 @@
       background-image url('../../images/pieces/symmetric/wN.svg')
       @media only screen and (min-width 600px)
         background-image url('../../images/pieces/symmetric/wP.svg'),url('../../images/pieces/symmetric/wN.svg'),url('../../images/pieces/symmetric/wB.svg'),url('../../images/pieces/symmetric/wR.svg'),url('../../images/pieces/symmetric/wQ.svg'),url('../../images/pieces/symmetric/wK.svg')
+  &.pixel
+    > label
+      background-image url('../../images/pieces/pixel/wN.svg')
+      @media only screen and (min-width 600px)
+        background-image url('../../images/pieces/pixel/wP.svg'),url('../../images/pieces/pixel/wN.svg'),url('../../images/pieces/pixel/wB.svg'),url('../../images/pieces/pixel/wR.svg'),url('../../images/pieces/pixel/wQ.svg'),url('../../images/pieces/pixel/wK.svg')
