Added 'staunty' piece set from lichess site.

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -498,6 +498,39 @@
     &.black
       background-image url('../../images/pieces/companion/bK.svg')
 
+/* Staunty */
+.staunty piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/staunty/wP.svg')
+    &.black
+      background-image url('../../images/pieces/staunty/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/staunty/wB.svg')
+    &.black
+      background-image url('../../images/pieces/staunty/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/staunty/wN.svg')
+    &.black
+      background-image url('../../images/pieces/staunty/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/staunty/wR.svg')
+    &.black
+      background-image url('../../images/pieces/staunty/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/staunty/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/staunty/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/staunty/wK.svg')
+    &.black
+      background-image url('../../images/pieces/staunty/bK.svg')
+
 /* symmetric */
 .symmetric piece
   &.pawn
