--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -194,6 +194,11 @@
       background-image url('../../images/pieces/riohacha/wN.svg')
       @media only screen and (min-width 600px)
         background-image url('../../images/pieces/riohacha/wP.svg'),url('../../images/pieces/riohacha/wN.svg'),url('../../images/pieces/riohacha/wB.svg'),url('../../images/pieces/riohacha/wR.svg'),url('../../images/pieces/riohacha/wQ.svg'),url('../../images/pieces/riohacha/wK.svg')
+  &.staunty
+    > label
+      background-image url('../../images/pieces/staunty/wN.svg')
+      @media only screen and (min-width 600px)
+        background-image url('../../images/pieces/staunty/wP.svg'),url('../../images/pieces/staunty/wN.svg'),url('../../images/pieces/staunty/wB.svg'),url('../../images/pieces/staunty/wR.svg'),url('../../images/pieces/staunty/wQ.svg'),url('../../images/pieces/staunty/wK.svg')
   &.symmetric
     > label
       background-image url('../../images/pieces/symmetric/wN.svg')
