Make clock display milliseconds when low on time( < 60secs ). This implements the proposed feature request #1215.

--- a/src/styl/clock.styl
+++ b/src/styl/clock.styl
@@ -63,6 +63,10 @@
   font-size 100px
   &.long
     font-size 70px
+  &.short
+    font-size 35px
+  &.noshort
+    display none
   &.flagged
     font-family "lichess"!important
     font-size 8em
@@ -70,10 +74,14 @@
     font-size 120px
     &.long
       font-size 90px
+    &.short
+      font-size 45px
   @media only screen and (orientation portrait) and (min-width 410px)
     font-size 130px
     &.long
       font-size 100px
+    &.short
+      font-size 50px
   @media only screen and (orientation landscape) and (min-width 568px)
     font-size 90px
     &.long
