Added missing lila board themes: blue2, blue-marble, green-plastic, leather, maple2, marble, newspaper, olive, wood4, purple-diag, pink-pyramid, ic.
Renamed existing blue2 -> blue3 to match theme name on lichess.org.

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -209,14 +209,50 @@ main
     background url('../../images/icons/game_icon_wood2.svg') no-repeat
   &.wood3::before
     background url('../../images/icons/game_icon_wood3.svg') no-repeat
+  &.wood4::before
+    background url('../../images/board/wood4.jpg') no-repeat
+    background-size: 40px;
   &.maple::before
     background url('../../images/icons/game_icon_maple.svg') no-repeat
+  &.maple2::before
+    background url('../../images/board/maple2.jpg') no-repeat
+    background-size: 40px;
+  &.leather::before
+    background url('../../images/board/leather.jpg') no-repeat
+    background-size: 40px;
+  &.marble::before
+    background url('../../images/board/marble.jpg') no-repeat
+    background-size: 40px;
+  &.green-plastic::before
+    background url('../../images/board/green-plastic.png') no-repeat
+    background-size: 40px;
+  &.olive::before
+    background url('../../images/board/olive.jpg') no-repeat
+    background-size: 40px;
+  &.newspaper::before
+    background url('../../images/board/newspaper.png') no-repeat
+    background-size: 40px;
+  &.purple-diag::before
+    background url('../../images/board/purple-diag.png') no-repeat
+    background-size: 40px;
+  &.blue2::before
+    background url('../../images/board/blue2.jpg') no-repeat
+    background-size: 40px;
   &.blue3::before
     background url('../../images/icons/game_icon_blue3.svg') no-repeat
+  &.blue-marble::before
+    background url('../../images/board/blue-marble.jpg') no-repeat
+    background-size: 40px;
   &.canvas::before
     background url('../../images/icons/game_icon_canvas.svg') no-repeat
   &.metal::before
     background url('../../images/icons/game_icon_metal.svg') no-repeat
+  &.pink::before
+    background url('../../images/board/pink-pyramid.png') no-repeat
+    background-size: 40px;
+  &.ic::before
+    background url('../../images/board/svg/ic.svg') no-repeat
+    background-size: 40px;
   &.new_challenge:before
     background transparent
     font-family: "lichess" !important;
