--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -100,16 +100,52 @@
     background-image url('../../images/board/icons/wood2.png')
   &.wood3
     background-image url('../../images/board/icons/wood3.png')
+  &.wood4
+    background-image url('../../images/board/wood4.jpg')
+    background-size: 256px
   &.maple
     background-image url('../../images/board/icons/maple.png')
+  &.maple2
+    background-image url('../../images/board/maple2.jpg')
+    background-size: 256px
+  &.leather
+    background-image url('../../images/board/leather.jpg')
+    background-size: 256px
+  &.marble
+    background-image url('../../images/board/marble.jpg')
+    background-size: 256px
+  &.green-plastic
+    background-image url('../../images/board/green-plastic.png')
+    background-size: 256px
+  &.olive
+    background-image url('../../images/board/olive.jpg')
+    background-size: 256px
+  &.newspaper
+    background-image url('../../images/board/newspaper.png')
+    background-size: 256px
+  &.purple-diag
+    background-image url('../../images/board/purple-diag.png')
+    background-size: 256px
+  &.blue2
+    background-image url('../../images/board/blue2.jpg')
+    background-size: 256px
   &.blue3
     background-image url('../../images/board/icons/blue3.png')
+  &.blue-marble
+    background-image url('../../images/board/blue-marble.jpg')
+    background-size: 256px
   &.canvas
     background-image url('../../images/board/icons/canvas.png')
   &.grey
     background-image url('../../images/board/icons/grey.png')
   &.metal
     background-image url('../../images/board/icons/metal.png')
+  &.pink
+    background-image url('../../images/board/pink-pyramid.png')
+    background-size: 256px
+  &.ic
+    background-image url('../../images/board/svg/ic.svg')
+    background-size: 256px
 
 .list_item.piece_theme
   line-height 60px
