--- a/src/styl/chessground-board.styl
+++ b/src/styl/chessground-board.styl
@@ -167,6 +167,30 @@
       color rgba(#91683a, 1)
     &.coord-odd
       color rgba(#bdb3a7, 1)
+.wood4 > .cg-board
+  background-image url('../../images/board/wood4.jpg')
+.wood4.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#caaf7d, 1)
+    &.coord-even
+      color rgba(#7b5330, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#caaf7d, 1)
+    &.coord-odd
+      color rgba(#7b5330, 1)
+.wood4.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#7b5330, 1)
+    &.coord-even
+      color rgba(#caaf7d, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#7b5330, 1)
+    &.coord-odd
+      color rgba(#caaf7d, 1)
 .maple > .cg-board
   background-image url('../../images/board/maple.jpg')
 .maple.orientation-white
@@ -191,6 +215,198 @@
       color rgba(#BB7D4A, 1)
     &.coord-odd
       color rgba(#ECCCA3, 1)
+.maple2 > .cg-board
+  background-image url('../../images/board/maple2.jpg')
+.maple2.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#e2c89f, 1)
+    &.coord-even
+      color rgba(#996633, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#e2c89f, 1)
+    &.coord-odd
+      color rgba(#996633, 1)
+.maple2.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#996633, 1)
+    &.coord-even
+      color rgba(#e2c89f, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#996633, 1)
+    &.coord-odd
+      color rgba(#e2c89f, 1)
+.leather > .cg-board
+  background-image url('../../images/board/leather.jpg')
+.leather.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#d1d1c9, 1)
+    &.coord-even
+      color rgba(#c28e16, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#d1d1c9, 1)
+    &.coord-odd
+      color rgba(#c28e16, 1)
+.leather.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#c28e16, 1)
+    &.coord-even
+      color rgba(#d1d1c9, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#c28e16, 1)
+    &.coord-odd
+      color rgba(#d1d1c9, 1)
+.marble > .cg-board
+  background-image url('../../images/board/marble.jpg')
+.marble.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#93ab91, 1)
+    &.coord-even
+      color rgba(#4f644e, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#93ab91, 1)
+    &.coord-odd
+      color rgba(#4f644e, 1)
+.marble.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#4f644e, 1)
+    &.coord-even
+      color rgba(#93ab91, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#4f644e, 1)
+    &.coord-odd
+      color rgba(#93ab91, 1)
+.green-plastic > .cg-board
+  background-image url('../../images/board/green-plastic.png')
+.green-plastic.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#f2f9bb, 1)
+    &.coord-even
+      color rgba(#59935d, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#f2f9bb, 1)
+    &.coord-odd
+      color rgba(#59935d, 1)
+.green-plastic.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#59935d, 1)
+    &.coord-even
+      color rgba(#f2f9bb, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#59935d, 1)
+    &.coord-odd
+      color rgba(#f2f9bb, 1)
+.olive > .cg-board
+  background-image url('../../images/board/olive.jpg')
+.olive.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#b8b19f, 1)
+    &.coord-even
+      color rgba(#6d6655, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#b8b19f, 1)
+    &.coord-odd
+      color rgba(#6d6655, 1)
+.olive.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#6d6655, 1)
+    &.coord-even
+      color rgba(#b8b19f, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#6d6655, 1)
+    &.coord-odd
+      color rgba(#b8b19f, 1)
+.newspaper > .cg-board
+  background-image url('../../images/board/newspaper.png')
+.newspaper.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#fff, 1)
+    &.coord-even
+      color rgba(#8d8d8d, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#fff, 1)
+    &.coord-odd
+      color rgba(#8d8d8d, 1)
+.newspaper.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#8d8d8d, 1)
+    &.coord-even
+      color rgba(#fff, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#8d8d8d, 1)
+    &.coord-odd
+      color rgba(#fff, 1)
+.purple-diag > .cg-board
+  background-image url('../../images/board/purple-diag.png')
+.purple-diag.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#e5daf0, 1)
+    &.coord-even
+      color rgba(#957ab0, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#e5daf0, 1)
+    &.coord-odd
+      color rgba(#957ab0, 1)
+.purple-diag.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#957ab0, 1)
+    &.coord-even
+      color rgba(#e5daf0, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#957ab0, 1)
+    &.coord-odd
+      color rgba(#e5daf0, 1)
+.blue2 > .cg-board
+  background-image url('../../images/board/blue2.jpg')
+.blue2.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#97b2c7, 1)
+    &.coord-even
+      color rgba(#546f82, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#97b2c7, 1)
+    &.coord-odd
+      color rgba(#546f82, 1)
+.blue2.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#546f82, 1)
+    &.coord-even
+      color rgba(#97b2c7, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#546f82, 1)
+    &.coord-odd
+      color rgba(#97b2c7, 1)
 .blue3 > .cg-board
   background-image url('../../images/board/blue3.jpg')
 .blue3
@@ -210,6 +426,30 @@
     > .ranks > li-coord
       &.coord-even
         color rgba(#487aad, 1)
+.blue-marble > .cg-board
+  background-image url('../../images/board/blue-marble.jpg')
+.blue-marble.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#eae6dd, 1)
+    &.coord-even
+      color rgba(#7c7f87, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#eae6dd, 1)
+    &.coord-odd
+      color rgba(#7c7f87, 1)
+.blue-marble.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#7c7f87, 1)
+    &.coord-even
+      color rgba(#eae6dd, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#7c7f87, 1)
+    &.coord-odd
+      color rgba(#eae6dd, 1)
 .canvas > .cg-board
   background-image url('../../images/board/canvas.jpg')
 .canvas.orientation-white
@@ -282,6 +522,54 @@
       color rgba(#727272, 1)
     &.coord-odd
       color rgba(#cecece, 1)
+.pink > .cg-board
+  background-image url('../../images/board/pink-pyramid.png')
+.pink.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#e8e9b7, 1)
+    &.coord-even
+      color rgba(#ed7272, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#e8e9b7, 1)
+    &.coord-odd
+      color rgba(#ed7272, 1)
+.pink.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#ed7272, 1)
+    &.coord-even
+      color rgba(#e8e9b7, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#ed7272, 1)
+    &.coord-odd
+      color rgba(#e8e9b7, 1)
+.ic > .cg-board
+  background-image url('../../images/board/svg/ic.svg')
+.ic.orientation-white
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#ececec, 1)
+    &.coord-even
+      color rgba(#c1c18e, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#ececec, 1)
+    &.coord-odd
+      color rgba(#c1c18e, 1)
+.ic.orientation-black
+  > .files > li-coord
+    &.coord-odd
+      color rgba(#c1c18e, 1)
+    &.coord-even
+      color rgba(#ececec, 1)
+  > .ranks > li-coord
+    &.coord-even
+      color rgba(#c1c18e, 1)
+    &.coord-odd
+      color rgba(#ececec, 1)
 
 .kingOfTheHill > .cg-board:before
   width: 25%;
