Handle game button color

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -192,31 +192,19 @@ main
     display block
     width 20px
     height 20px
-    background url('../../images/icons/game_icon.svg') no-repeat
+    background-repeat no-repeat
+    background-image url('../../images/board/svg/brown.svg')
+    background-size 40px
   &.brown::before
-    background url('../../images/icons/game_icon_brown.svg') no-repeat
+    background-image url('../../images/board/svg/brown.svg')
   &.blue::before
-    background url('../../images/icons/game_icon_blue.svg') no-repeat
+    background-image url('../../images/board/svg/blue.svg')
   &.green::before
-    background url('../../images/icons/game_icon_green.svg') no-repeat
-  &.grey::before
-    background url('../../images/icons/game_icon_grey.svg') no-repeat
+    background-image url('../../images/board/svg/green.svg')
   &.purple::before
-    background url('../../images/icons/game_icon_purple.svg') no-repeat
-  &.wood::before
-    background url('../../images/icons/game_icon_wood.svg') no-repeat
-  &.wood2::before
-    background url('../../images/icons/game_icon_wood2.svg') no-repeat
-  &.wood3::before
-    background url('../../images/icons/game_icon_wood3.svg') no-repeat
-  &.maple::before
-    background url('../../images/icons/game_icon_maple.svg') no-repeat
-  &.blue3::before
-    background url('../../images/icons/game_icon_blue3.svg') no-repeat
-  &.canvas::before
-    background url('../../images/icons/game_icon_canvas.svg') no-repeat
-  &.metal::before
-    background url('../../images/icons/game_icon_metal.svg') no-repeat
+    background-image url('../../images/board/svg/purple.svg')
+  &.ic::before
+    background-image url('../../images/board/svg/ic.svg')
   &.new_challenge:before
     background transparent
     font-family: "lichess" !important;
