Added 'cardinal' piece set from lichess site.

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -498,6 +498,39 @@
     &.black
       background-image url('../../images/pieces/companion/bK.svg')
 
+/* Cardinal */
+.cardinal piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/cardinal/wP.svg')
+    &.black
+      background-image url('../../images/pieces/cardinal/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/cardinal/wB.svg')
+    &.black
+      background-image url('../../images/pieces/cardinal/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/cardinal/wN.svg')
+    &.black
+      background-image url('../../images/pieces/cardinal/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/cardinal/wR.svg')
+    &.black
+      background-image url('../../images/pieces/cardinal/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/cardinal/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/cardinal/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/cardinal/wK.svg')
+    &.black
+      background-image url('../../images/pieces/cardinal/bK.svg')
+
 /* Staunty */
 .staunty piece
   &.pawn
