--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -194,6 +194,11 @@
       background-image url('../../images/pieces/riohacha/wN.svg')
       @media only screen and (min-width 600px)
         background-image url('../../images/pieces/riohacha/wP.svg'),url('../../images/pieces/riohacha/wN.svg'),url('../../images/pieces/riohacha/wB.svg'),url('../../images/pieces/riohacha/wR.svg'),url('../../images/pieces/riohacha/wQ.svg'),url('../../images/pieces/riohacha/wK.svg')
+  &.cardinal
+    > label
+      background-image url('../../images/pieces/cardinal/wN.svg')
+      @media only screen and (min-width 600px)
+        background-image url('../../images/pieces/cardinal/wP.svg'),url('../../images/pieces/cardinal/wN.svg'),url('../../images/pieces/cardinal/wB.svg'),url('../../images/pieces/cardinal/wR.svg'),url('../../images/pieces/cardinal/wQ.svg'),url('../../images/pieces/cardinal/wK.svg')
   &.staunty
     > label
       background-image url('../../images/pieces/staunty/wN.svg')
