Improve games menu smoothness

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -205,7 +205,7 @@ main
     background-image url('../../images/board/svg/purple.svg')
   &.ic::before
     background-image url('../../images/board/svg/ic.svg')
-  &.new_challenge:before
+  .buttons > &.new_challenge:before
     background transparent
     font-family: "lichess" !important;
     content: "U";
