Make 'maestro' piece set available in app.

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -498,6 +498,39 @@
     &.black
       background-image url('../../images/pieces/companion/bK.svg')
 
+/* Maestro */
+.maestro piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/maestro/wP.svg')
+    &.black
+      background-image url('../../images/pieces/maestro/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/maestro/wB.svg')
+    &.black
+      background-image url('../../images/pieces/maestro/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/maestro/wN.svg')
+    &.black
+      background-image url('../../images/pieces/maestro/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/maestro/wR.svg')
+    &.black
+      background-image url('../../images/pieces/maestro/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/maestro/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/maestro/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/maestro/wK.svg')
+    &.black
+      background-image url('../../images/pieces/maestro/bK.svg')
+
 /* Cardinal */
 .cardinal piece
   &.pawn
