--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -235,6 +235,11 @@
       background-image url('../../images/pieces/riohacha/wN.svg')
       @media only screen and (min-width 600px)
         background-image url('../../images/pieces/riohacha/wP.svg'),url('../../images/pieces/riohacha/wN.svg'),url('../../images/pieces/riohacha/wB.svg'),url('../../images/pieces/riohacha/wR.svg'),url('../../images/pieces/riohacha/wQ.svg'),url('../../images/pieces/riohacha/wK.svg')
+  &.maestro
+    > label
+      background-image url('../../images/pieces/maestro/wN.svg')
+      @media only screen and (min-width 600px)
+        background-image url('../../images/pieces/maestro/wP.svg'),url('../../images/pieces/maestro/wN.svg'),url('../../images/pieces/maestro/wB.svg'),url('../../images/pieces/maestro/wR.svg'),url('../../images/pieces/maestro/wQ.svg'),url('../../images/pieces/maestro/wK.svg')
   &.cardinal
     > label
       background-image url('../../images/pieces/cardinal/wN.svg')
