Make 'dubrovny' piece set available in app.

--- a/src/styl/chessground-piece.styl
+++ b/src/styl/chessground-piece.styl
@@ -597,6 +597,39 @@
     &.black
       background-image url('../../images/pieces/symmetric/bK.svg')
 
+/* Dubrovny */
+.dubrovny piece
+  &.pawn
+    &.white
+      background-image url('../../images/pieces/dubrovny/wP.svg')
+    &.black
+      background-image url('../../images/pieces/dubrovny/bP.svg')
+  &.bishop
+    &.white
+      background-image url('../../images/pieces/dubrovny/wB.svg')
+    &.black
+      background-image url('../../images/pieces/dubrovny/bB.svg')
+  &.knight
+    &.white
+      background-image url('../../images/pieces/dubrovny/wN.svg')
+    &.black
+      background-image url('../../images/pieces/dubrovny/bN.svg')
+  &.rook
+    &.white
+      background-image url('../../images/pieces/dubrovny/wR.svg')
+    &.black
+      background-image url('../../images/pieces/dubrovny/bR.svg')
+  &.queen
+    &.white
+      background-image url('../../images/pieces/dubrovny/wQ.svg')
+    &.black
+      background-image url('../../images/pieces/dubrovny/bQ.svg')
+  &.king
+    &.white
+      background-image url('../../images/pieces/dubrovny/wK.svg')
+    &.black
+      background-image url('../../images/pieces/dubrovny/bK.svg')
+
 /* Pixel */
 .pixel piece
   &.pawn
