--- a/src/styl/settings.styl
+++ b/src/styl/settings.styl
@@ -250,6 +250,11 @@
       background-image url('../../images/pieces/symmetric/wN.svg')
       @media only screen and (min-width 600px)
         background-image url('../../images/pieces/symmetric/wP.svg'),url('../../images/pieces/symmetric/wN.svg'),url('../../images/pieces/symmetric/wB.svg'),url('../../images/pieces/symmetric/wR.svg'),url('../../images/pieces/symmetric/wQ.svg'),url('../../images/pieces/symmetric/wK.svg')
+  &.dubrovny
+    > label
+      background-image url('../../images/pieces/dubrovny/wN.svg')
+      @media only screen and (min-width 600px)
+        background-image url('../../images/pieces/dubrovny/wP.svg'),url('../../images/pieces/dubrovny/wN.svg'),url('../../images/pieces/dubrovny/wB.svg'),url('../../images/pieces/dubrovny/wR.svg'),url('../../images/pieces/dubrovny/wQ.svg'),url('../../images/pieces/dubrovny/wK.svg')
   &.pixel
     > label
       background-image url('../../images/pieces/pixel/wN.svg')
